Mon Feb 22 15:01:00 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Per pudge@pobox.com from cpan-testers@perl.org, changed splitting on
	"\n"'s to "\012"'s for the MacOS folks

Fri Feb 19 21:20:47 1999  msolomon  <msolomon@fido.seva.net>

	* dist/icons.tar: Added

Thu Feb 18 20:12:21 1999  msolomon  <msolomon@fido.seva.net>

	* examples/wx.cgi, examples/hash.pl, examples/simple2.pl:
	Changed WeahterNOAA to Geo::WeatherNOAA

Wed Feb 17 17:39:44 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Added return of Coverage area in process_city_zone()
	Added coverage table row to make_noaa_table()
	Added doc about opt_v

	* README: Added Geo::

Tue Feb 16 05:27:48 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Inside get_city_zone(), when looking for correct data section, also
	look for four digits which is the year which is always in the date line of
	the section.  Without this date, we'll consider the forecast invalid.  Any help?

Thu Feb 11 19:26:02 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm, Makefile.PL, README:
	Fixed Makefile.PL to install in correct place, and check for packages
	Added listserv info

Tue Feb  9 20:25:57 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Added MaxItems to make_noaa_table()

Sun Feb  7 04:27:55 1999  msolomon  <msolomon@fido.seva.net>

	* test.pl: Fixed WeatherNOAA to be Geo::WeatherNOAA

Sat Feb  6 04:04:44 1999  msolomon  <msolomon@fido.seva.net>

	* examples/wx.cgi, examples/simple2.pl, examples/hash.pl, examples/simple.pl, README, WeatherNOAA.pm, t.pl, MANIFEST:
	added examples, added print_*()

	* WeatherNOAA.pm: Corrected Home URL

	* WeatherNOAA.pm: Tweak on error reporting

	* WeatherNOAA.pm: Added better error reporting

	* WeatherNOAA.pm: Added Geo::

Wed Feb  3 21:05:13 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Check for existance of $line as well before unpack'ing
	Assume 'get' as fileopt in make_noaa_table
